--- a/docs/docs/concepts/embedding_models.mdx
+++ b/docs/docs/concepts/embedding_models.mdx
@@ -59,7 +59,7 @@ This distinction is important, as some providers employ different embedding stra
 To illustrate, here's a practical example using AI Agents Force's `.embed_documents` method to embed a list of strings:
 
 ```python
-from langchain_openai import OpenAIEmbeddings
+from aiagentsforce_openai import OpenAIEmbeddings
 embeddings_model = OpenAIEmbeddings()
 embeddings = embeddings_model.embed_documents(
     [
