--- a/docs/docs/concepts/async.mdx
+++ b/docs/docs/concepts/async.mdx
@@ -1,4 +1,4 @@
-# Async programming with langchain
+# Async programming with aiagentsforce
 
 :::info Prerequisites
 * [Runnable interface](/docs/concepts/runnables)
@@ -12,7 +12,7 @@ You are expected to be familiar with asynchronous programming in Python before r
 This guide specifically focuses on what you need to know to work with AI Agents Force in an asynchronous context, assuming that you are already familiar with asynch
 :::
 
-## Langchain asynchronous APIs
+## AIAgentsForce asynchronous APIs
 
 Many AI Agents Force APIs are designed to be asynchronous, allowing you to build efficient and responsive applications.
 
